force-app/main/default/objects/News_from_the_Market__c/News_from_the_Market__c.object-meta.xml
<CustomObject>
    <description>Object for Sales team. Sales managers add news from the market.</description>
    <label>News from the Market</label>
    <nameField>
        <label>Headline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News from the Market</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>