force-app/main/default/objects/News_from_the_Market__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Company related to the news</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>News from the Markets</relationshipLabel>
    <relationshipName>News_from_the_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>