force-app/main/default/objects/News_from_the_Market__c/fields/Approved_by_Head_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Head_of_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Head of Sales</label>
    <type>Checkbox</type>
</CustomField>