force-app/main/default/objects/News_from_the_Market__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Information</fullName>
            </value>
            <value>
                <fullName>Competitors News</fullName>
            </value>
            <value>
                <fullName>Project/Tenders</fullName>
            </value>
            <value>
                <fullName>Order Execution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>