force-app/main/default/objects/News_from_the_Market__c/fields/Comments_from_Head_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Head_of_Sales__c</fullName>
    <description>Additional comments from Sales Director</description>
    <label>Comments from Head of Sales</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>