force-app/main/default/objects/News_from_the_Market__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>News from the Markets</relationshipLabel>
    <relationshipName>News_from_the_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>