force-app/main/default/objects/News_from_the_Market__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <inlineHelpText>Link to the website to the news</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>