force-app/main/default/objects/News_from_the_Market__c/fields/News__c.field-meta.xml
<CustomField>
    <fullName>News__c</fullName>
    <label>News</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>