force-app/main/default/objects/News_from_the_Market__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LP/GU</fullName>
            </value>
            <value>
                <fullName>OCTG</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Welded</fullName>
            </value>
            <value>
                <fullName>Billet</fullName>
            </value>
            <value>
                <fullName>Wheels</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>