force-app/main/default/objects/News_from_the_Market__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
                <color>#66FF99</color>
                <label>Positive</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <color>#DDDDDD</color>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Negative</fullName>
                <color>#FF6666</color>
                <label>Negative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>