force-app/main/default/objects/News_from_the_Market__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Country__c</columns>
    <columns>Link__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Region__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>