force-app/main/default/objects/News_from_the_Market__c/listViews/All_News.listView-meta.xml
<ListView>
    <fullName>All_News</fullName>
    <columns>NAME</columns>
    <columns>News__c</columns>
    <columns>Category__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Region__c</columns>
    <columns>Type__c</columns>
    <columns>Country__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Approved_by_Head_of_Sales__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>All News</label>
</ListView>